--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                   it somewhere in the scope from which you wish to call it.<br>
                   <pre><code>
                       function showMessage() {
-                        alert( 'Hello everyone!' );
+                        alert( 'Hello everyone!!' );
                        }
                     </code></pre></p>
 
