--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 
             </section> 
             <div class="clear"></div>   
-    <footer> Website by Abigail
+    <footer> Website by Abby
         <span>&copy;2018</span>
         <!-- <ul id="menuFooter">
              -->
